# PyMacroRecorder

./: .codacy.yaml  .gitignore  CONTRIBUTING.md  README.md  build-manylinux.sh  build.ps1  build.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
pymacrorecorder/: __init__.py  app.py  config.py  hotkeys.py  models.py  player.py  recorder.py  storage.py  utils.py
tests/: conftest.py  test_app.py  test_config.py  test_hotkeys.py  test_models.py  test_player.py  test_recorder.py  test_storage.py  test_utils.py
