[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymacrorecorder"
version = "0.1.1"
description = "Cross-platform Tkinter macro recorder for keyboard and mouse."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PyMacroRecorder" }]
license = { file = "LICENSE" }
dependencies = [
  "pynput>=1.7.6",
  "appdirs>=1.4.4",
]

[project.urls]
Homepage = "https://github.com/Redstoneur/PyMacroRecorder"
Repository = "https://github.com/Redstoneur/PyMacroRecorder.git"

[tool.setuptools]
packages = ["pymacrorecorder"]
